@@ -3,10 +3,12 @@ Changelog
 
 4.2-dev - (unreleased)
 ----------------------
+* Feature: Added mime-types vocabulary
+  [voineali #4815]
 
 4.1 - (2011-11-18)
 ------------------
-* Rerelease broken egg  
+* Rerelease broken egg
 
 4.0 - (2011-11-18)
 ------------------
